--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,78 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <ImageView
-        android:id="@+id/logo_actMain"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_transparent_with_name" />
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <soup.neumorphism.NeumorphTextView
-        android:id="@+id/enternumber"
-        style="@style/Widget.Neumorph.TextView"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+
+        android:layout_height="300dp"
+        android:layout_marginTop="-50dp"
+        app:cardCornerRadius="50dp"
+        app:cardElevation="50dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/splash_gradient">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Greetings,\nWelcome to Vichitra"
+                android:textSize="25sp"
+                android:layout_marginTop="125dp"
+                android:layout_marginLeft="12dp"
+                android:textColor="@color/white"
+                android:fontFamily="serif"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="56dp"
+        android:fontFamily="serif"
+        android:gravity="center_horizontal"
         android:text="Select Your Country Code and Enter Your Phone Number "
-        android:textColor="#004791"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_actMain"
-        app:neumorph_lightSource="leftTop"
-        app:neumorph_shadowColorDark="#FFFFFF"
-        app:neumorph_shadowColorLight="#FFFFFF" />
+        android:textColor="#004791" />
 
     <com.hbb20.CountryCodePicker
         android:id="@+id/countrycode"
         android:layout_width="136dp"
         android:layout_height="41dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
+        android:foregroundGravity="center_horizontal"
+        android:gravity="center_horizontal"
         app:ccp_autoDetectCountry="true"
-        app:ccp_countryPreference="IN"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enternumber" />
+        app:ccp_countryPreference="IN" />
 
-    <EditText
-        android:id="@+id/phonenumber"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="15dp"
-        android:hint="Enter Your Phone Number"
-        android:maxLength="10"
-        android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countrycode" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_gravity="center"
+    android:layout_marginTop="10dp">
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_baseline_phone_24"/>
 
-    <soup.neumorphism.NeumorphButton
-        android:id="@+id/sendotpbutton"
-        style="@style/Widget.Neumorph.Button"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:shadowColor="#006674"
+        android:layout_marginLeft="5dp"
+        app:boxCornerRadiusBottomEnd="5dp"
+        app:boxCornerRadiusBottomStart="5dp"
+        app:boxCornerRadiusTopEnd="5dp"
+        app:boxCornerRadiusTopStart="5dp">
+
+
+        <EditText
+            android:id="@+id/phonenumber"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="15dp"
+            android:hint="Enter Your Phone Number"
+            android:inputType="phone"
+            android:maxLength="10" />
+    </com.google.android.material.textfield.TextInputLayout>
+</LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/sendotpbutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Submit"
-        android:textColor="#004791"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phonenumber"
-        app:neumorph_backgroundColor="#00B0DF"
-        app:neumorph_lightSource="leftTop"
-        app:neumorph_shadowColorDark="#006674"
-        app:neumorph_shadowElevation="4dp" />
+        android:background="@drawable/splash_gradient"
+        android:layout_marginTop="25dp"
+        android:layout_marginHorizontal="30dp"
+        android:textColor="@color/white"
+        android:fontFamily="serif"/>
+
+
+
 
     <ProgressBar
         android:id="@+id/progressbarofmain"
@@ -80,8 +105,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sendotpbutton" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_gravity="center"/>
+</LinearLayout>
