--- a/app/src/main/res/layout/activity_otp_authentication.xml
+++ b/app/src/main/res/layout/activity_otp_authentication.xml
@@ -1,37 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OTP_Authentication">
+    tools:context=".OTP_Authentication"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/logo_otpAuth"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_transparent_with_name" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
 
-    <soup.neumorphism.NeumorphTextView
-        android:id="@+id/enterotptextview"
-        style="@style/Widget.Neumorph.TextView"
+        android:layout_height="300dp"
+        android:layout_marginTop="-50dp"
+        app:cardCornerRadius="50dp"
+        app:cardElevation="50dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/splash_gradient">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Please Enter Your OTP !"
+                android:textSize="25sp"
+                android:layout_marginTop="155dp"
+                android:layout_marginLeft="12dp"
+                android:textColor="@color/white"
+                android:fontFamily="serif"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Enter the OTP Below..."
-        android:textColor="#004791"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_otpAuth"
-        app:neumorph_lightSource="leftTop"
-        app:neumorph_shadowColorDark="#FFFFFF"
-        app:neumorph_shadowColorLight="#FFFFFF" />
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp">
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_baseline_message_24"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            app:boxCornerRadiusBottomEnd="5dp"
+            app:boxCornerRadiusBottomStart="5dp"
+            app:boxCornerRadiusTopEnd="5dp"
+            app:boxCornerRadiusTopStart="5dp">
+
+
+            <EditText
+                android:id="@+id/enterotp"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginTop="15dp"
+                android:hint="Enter OTP Here"
+                android:inputType="number"
+                android:maxLength="6" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Verify"
+        android:id="@+id/verifyotpbutton"
+        android:background="@drawable/splash_gradient"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="45dp"
+        android:textColor="@color/white"
+        android:fontFamily="serif"/>
+
+<!--    <ImageView-->
+<!--        android:id="@+id/logo_otpAuth"-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="150dp"-->
+<!--        android:layout_marginTop="80dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.498"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:srcCompat="@drawable/logo_transparent_with_name" />-->
+
+
 
 
     <TextView
@@ -39,41 +93,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:fontFamily="serif"
+        android:textSize="15sp"
+        android:layout_gravity="center"
         android:text="Having Difficulty? Change Number..."
         android:textColor="#004791"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verifyotpbutton" />
 
-    <EditText
-        android:id="@+id/enterotp"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="40dp"
-        android:hint="Enter OTP."
-        android:inputType="number"
-        android:maxLength="6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterotptextview" />
+<!--    <EditText-->
+<!--        android:id="@+id/enterotp"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        android:hint="Enter OTP."-->
+<!--        android:inputType="number"-->
+<!--        android:maxLength="6"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.497"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/enterotptextview" />-->
 
-    <soup.neumorphism.NeumorphButton
-        android:id="@+id/verifyotpbutton"
-        style="@style/Widget.Neumorph.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:shadowColor="#006674"
-        android:text="Submit"
-        android:textColor="#004791"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterotp"
-        app:neumorph_backgroundColor="#00B0DF"
-        app:neumorph_lightSource="leftTop"
-        app:neumorph_shadowColorDark="#006674"
-        app:neumorph_shadowElevation="4dp" />
+<!--    <soup.neumorphism.NeumorphButton-->
+<!--        android:id="@+id/verifyotpbutton"-->
+<!--        style="@style/Widget.Neumorph.Button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        android:shadowColor="#006674"-->
+<!--        android:text="Submit"-->
+<!--        android:textColor="#004791"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/enterotp"-->
+<!--        app:neumorph_backgroundColor="#00B0DF"-->
+<!--        app:neumorph_lightSource="leftTop"-->
+<!--        app:neumorph_shadowColorDark="#006674"-->
+<!--        app:neumorph_shadowElevation="4dp" />-->
 
     <ProgressBar
         android:id="@+id/progressbarofotpauth"
@@ -81,9 +138,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changenumber" />
+        android:layout_gravity="center" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
