--- a/app/src/main/res/layout/chatviewlayout.xml
+++ b/app/src/main/res/layout/chatviewlayout.xml
@@ -3,7 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:elevation="10dp"
+    android:outlineProvider="background"
+    android:clipToOutline="true"
+    >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -66,5 +70,9 @@
             android:layout_marginTop="-5dp"/>
 
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/splash_gradient"/>
 
 </RelativeLayout>
