--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,6 +11,9 @@
     <item android:id="@+id/settings"
         android:title="Settings">
 
+    </item><item android:id="@+id/logout"
+        android:title="Log Out">
+
     </item>
 
 
