--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,11 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Vichitra" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">#000</item>
     </style>
 
     <style name="Theme.Vichitra" parent="Base.Theme.Vichitra" />
+    <style name="CardView.gradient" parent="CardView">
+        <item name="android:foreground">@drawable/splash_gradient</item>
+    </style>
 </resources>
